--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.2",
+    "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -16,6 +18,7 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.9.0",
     "geist": "^1.2.1",
     "ionicons": "^7.4.0",
     "lucide-react": "^0.436.0",
@@ -24,6 +27,7 @@
     "prettier": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.3.0",
     "react-ionicons": "^4.2.1"
   },
   "devDependencies": {
