--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
-    "react-ionicons": "^4.2.1"
+    "react-ionicons": "^4.2.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
