--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
     "geist": "^1.2.1",
     "ionicons": "^7.4.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "next": "latest",
     "next-themes": "^0.3.0",
