--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flowbite": "^2.5.2",
     "framer-motion": "^11.9.0",
     "geist": "^1.2.1",
     "ionicons": "^7.4.0",
