--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.9.0",
     "geist": "^1.2.1",
     "ionicons": "^7.4.0",
+    "localstorage-slim": "^2.7.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.436.0",
     "next": "latest",
