--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
     "react-ionicons": "^4.2.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "stream-chat-react": "^12.5.2"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
